@@ -1,0 +1,3 @@
+Site URL: https://www1.javhoho.com/
+Contact: https://www1.javhoho.com/contact-javhoho/
+DMCA: https://www1.javhoho.com/dmca/
